# KSAI-Toolkits

./: CMakeLists.txt  README.md
doc/: benchmark.md
include/: ks_afx.h  ks_data_type.h  ks_ocr.h
src/: CMakeLists.txt
src/OCR/: ks_line.h  ks_ocr.cpp  ks_ocr_cls.cpp  ks_ocr_cls.h  ks_ocr_det.cpp  ks_ocr_det.h  ks_ocr_recog.cpp  ks_ocr_recog.h  ks_ocr_utility.cpp  ks_ocr_utility.h
src/base/: ks_common_op.cpp  ks_common_op.h  ks_inference_base.cpp  ks_inference_base.h  ks_loader_op.cpp  ks_loader_op.h
test/: CMakeLists.txt  test_ocr.cpp
tools/: build_aarch64.sh  build_linux.sh  build_loongarch64.sh  build_mips64.sh  build_windows.bat
